force-app/main/default/objects/Contact/fields/Birthday_Day__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Day__c</fullName>
    <formula>TEXT(DAY(  Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Day</label>
    <type>Text</type>
</CustomField>