force-app/main/default/objects/Contact/fields/cross_object__c.field-meta.xml
<CustomField>
    <fullName>cross_object__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cross object</label>
    <type>Text</type>
</CustomField>